--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,16 @@
 {% block content %}
 {% for item in jobs%}
 <h1>Action {{item.id}}</h1>
+{% if current_user.is_authenticated and (current_user == item.user or current_user.id == 1) %}
+    <div>
+        <a href="/job/{{ item.id }}" class="btn btn-warning">
+            Изменить
+        </a>
+        <a href="/job_delete/{{ item.id }}" class="btn btn-danger">
+            Удалить
+        </a>
+    </div>
+{% endif %}
 <table class="table">
   <thead>
     <tr class="table-secondary">
